package domain.prenda;

public enum AlertaMeteorologica {
  TORMENTA,
  GRANIZO
}
