package domain.prenda;

import java.util.List;

public class Sugerencia {
  List<Vestimenta> vestimentas;
}
